--- a/example/index.html
+++ b/example/index.html
@@ -3,12 +3,10 @@
     <head>
         <title>mind-mapper</title>
         <link rel="stylesheet" href="style.css">
-        <script src="drawer.js"></script>
+        <script src="../drawer.js"></script>
         <script src="main.js"></script>
     </head>
     <body>
-        <div id="mind-mapper">
-            <canvas id="squares"></canvas>
-        </div>
+        <canvas id="squares"></canvas>
     </body>
 </html>
